css bug: changed loader's z-index

--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(16, 16, 16, 0.5);
+    z-index: 9999;
   }
   
   @-webkit-keyframes uil-ring-anim {
@@ -146,8 +147,8 @@
     left: 0;
     bottom: 0;
     right: 0;
-    width: 20rem;
-    height: 20rem;
+    width: 10rem;
+    height: 10rem;
   }
   .uil-ring-css > div {
     position: absolute;
